third_party/move/move-compiler-v2/tests/checking/naming/assert_one_arg.exp

Diagnostics:
error: assert macro must have two arguments
  ┌─ tests/checking/naming/assert_one_arg.move:3:16
  │
3 │         assert!(false);
  │                ^^^^^^^

error: assert macro must have two arguments
  ┌─ tests/checking/naming/assert_one_arg.move:4:16
  │
4 │         assert!(0 != 1);
  │                ^^^^^^^^

error: assert macro must have two arguments
  ┌─ tests/checking/naming/assert_one_arg.move:5:16
  │
5 │         assert!(x != y);
  │                ^^^^^^^^
